--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,12 @@
         app:layout_constraintBottom_toTopOf="@id/fab"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
         tools:itemCount="8"
-        tools:listitem="@layout/item_task" />
+        tools:listitem="@layout/item_task"
+        tools:visibility="gone" />
+
+    <include
+        android:id="@+id/include_empty"
+        layout="@layout/empty_state" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
