--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -28,6 +28,7 @@
         tools:text="01/01/2021 18:00" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_more"
         android:layout_width="36dp"
         android:layout_height="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
